# strands-rs

./: Cargo.toml  LICENSE  README.md
docs/: 01-quickstart.md  02-agent-loop.md  03-tools.md  04-model-adapters.md  05-conversation-management.md  06-hooks.md  07-multi-agent.md  08-session-management.md  09-plugins.md  10-streaming.md  11-claude-mcp.md
strands-claude-cli/: Cargo.toml
strands-claude-cli/src/: client.rs  lib.rs  stream.rs
strands-claude-mcp/: Cargo.toml
strands-claude-mcp/src/: bridge.rs  install.rs  lib.rs
strands-codex-cli/: Cargo.toml
strands-codex-cli/src/: client.rs  lib.rs  stream.rs
strands-core/: Cargo.toml
strands-core/src/: error.rs  lib.rs  model.rs  tool.rs
strands-core/src/agent/: builder.rs  callback.rs  event_loop.rs  mod.rs  result.rs
strands-core/src/conversation/: manager.rs  mod.rs  null.rs  sliding_window.rs  summarizing.rs
strands-core/src/hooks/: events.rs  mod.rs  registry.rs
strands-core/src/multiagent/: graph.rs  mod.rs  result.rs  swarm.rs
strands-core/src/plugin/: mod.rs
strands-core/src/session/: file.rs  mod.rs  repository.rs
strands-core/src/types/: content.rs  message.rs  mod.rs  streaming.rs  tools.rs
strands-core/tests/: agent_tests.rs
strands-gemini-cli/: Cargo.toml
strands-gemini-cli/src/: client.rs  lib.rs  stream.rs
strands-macros/: Cargo.toml
strands-macros/src/: lib.rs
strands-ollama/: Cargo.toml
strands-ollama/src/: client.rs  lib.rs  types.rs
strands-openrouter/: Cargo.toml
strands-openrouter/src/: client.rs  lib.rs  stream.rs  types.rs
