[package]
name = "strands-claude-mcp"
version = "0.1.0"
edition = "2021"
description = "Expose strands-core tools as a dynamic MCP server, register with Claude Code."
license = "Apache-2.0"
repository = "https://github.com/willpercey-gb/strands-rs"

[lib]
name = "strands_claude_mcp"
path = "src/lib.rs"

[[bin]]
name = "strands-claude-mcp-shim"
path = "src/bin/strands-claude-mcp-shim.rs"

[dependencies]
strands-core = { path = "../strands-core", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "net"] }
async-trait = "0.1"
tracing = "0.1"
