[package]
name = "strands-core"
version = "0.1.0"
edition = "2021"
description = "Core agent framework — Rust port of AWS Strands Agents"
license = "Apache-2.0"
repository = "https://github.com/willpercey-gb/strands-rs"

[dependencies]
tokio = { version = "1", features = ["sync", "time", "macros"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
strands-macros = { path = "../strands-macros", optional = true }

[features]
default = ["macros"]
macros = ["dep:strands-macros"]
