[package]
name = "strands-openrouter"
version = "0.1.0"
edition = "2021"
description = "OpenRouter (OpenAI-compatible) model adapter for strands-core"
license = "Apache-2.0"
repository = "https://github.com/willpercey-gb/strands-rs"

[dependencies]
strands-core = { path = "../strands-core", default-features = false }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
thiserror = "2"
futures = "0.3"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
